arrow hover added

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 					<h3>Most desired items</h3>
 				</div>
 				<div class="mid-right-mid">
-					<img src="svg/arrow.svg" class="arrow-left"  width="30" height="30">
+					<a href="#" class="arrow-left"><img src="svg/arrow.svg"   width="30" height="30"></a>
 					<div class="cream">
 						<img src="images_src/cream.jpg">
 						<p>Lorem ipsum aute laboris voluptate anim elit mollit culpa eiusmod cupidatat in eu do dolor eu in cupidatat fugiat ut est labore veniam cupidatat sint pariatur nulla eiusmod nostrud enim laboris ut.</p>
 					</div>
-					<img src="svg/arrow.svg" class="arrow-right"  width="30" height="30">
+					<a href="#" class="arrow-right"><img src="svg/arrow.svg"   width="30" height="30"></a>
 				</div>
 				<div class="mid-right-bottom">
 					<a class="discover twins" href="#">DISCOVER</a>
